# quadcopter

./: Makefile  meson.build
src/: main.cpp  meson.build
src/core/: meson.build  quad.cpp  quad.hpp  state.cpp  state.hpp
tests/: meson.build  test_core.cpp
